# OpencvTrainANNFeatureHOG

./: CMakeLists.txt  README.md  opencv_train_ann_hog.cpp
neg/: neg.txt
pos/: pos.txt
